argocd/route.yaml
apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: art-dash-server
    name: art-dash-server
  spec:
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: art-dash-server
      weight: 100
    wildcardPolicy: None
